# cortex

./: .gitignore  .mcp.json.example  DEMO_RECORDING_GUIDE.md  DEMO_SCRIPT.md  DEVPOST_SUBMISSION_COSMOS.md  DEVPOST_SUBMISSION_NEXTBYTE.md  HACKATHON_CLAUDE.md  HACKATHON_COSMOS.md  HACKATHON_ES.md  HACKATHON_GEMINI.md  HACKATHON_NEXTBYTE.md  LICENSE  README.md  __init__.py  decision.py  defaults.py  notifications.py  pyproject.toml  scheduler.py  timestamp_log.py
.github/workflows/: tests.yml
cortex/: __main__.py  circadian.py  cli.py  config.py  habituation.py  mcp_server.py  replay.py
cortex/bridges/: __init__.py  cosmos.py  elasticsearch.py  gemini.py
cortex/data/: __init__.py  sample_events.jsonl
cortex/sources/: __init__.py  base.py  reachy.py  vision.py
examples/: architecture_diagram.py  demo.py  demo_inference_batch.py  demo_results.json  egocentric_demo.py  egocentric_reachy_pipeline.py  elasticsearch_bridge.py  gemini_cognitive_agent.py  gemini_quickstart.py  live_dashboard.py  mcp_demo.py  reachy_bridge.py  replay_demo.py  sample_events.jsonl  test_cosmos_8b.sh  video_demo.py
sources/: __init__.py
tests/: test_circadian.py  test_cli.py  test_config.py  test_cosmos_bridge.py  test_decision.py  test_elasticsearch_bridge.py  test_gemini_bridge.py  test_habituation.py  test_mcp_server.py  test_notifications.py  test_reachy_sources.py  test_replay.py  test_scheduler.py  test_timestamp_log.py  test_vision_source.py
