[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-agent"
version = "0.1.0"
description = "Cognitive-science-based perception framework for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
reachy = ["reachy-mini>=1.3.0", "numpy>=1.24"]

[tool.setuptools.packages.find]
include = ["cortex*"]
