[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-agent"
version = "0.1.0"
description = "Cognitive-science-based perception framework for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Tsubasa Y"}]
requires-python = ">=3.10"
dependencies = []
keywords = ["ai", "perception", "cognitive-science", "habituation", "circadian", "gemini", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
mcp = ["mcp>=1.0.0"]
reachy = ["reachy-mini>=1.3.0", "numpy>=1.24"]
all = ["mcp>=1.0.0", "reachy-mini>=1.3.0", "numpy>=1.24"]

[project.scripts]
cortex-serve = "cortex.mcp_server:main"

[project.urls]
Homepage = "https://github.com/tsubasa-rsrch/cortex"
Repository = "https://github.com/tsubasa-rsrch/cortex"

[tool.setuptools.packages.find]
include = ["cortex*"]
